# tycho-simulation

./: .gitmodules  CHANGELOG.md  Cargo.toml  Readme.md  check.sh  rustfmt.toml
.github/workflows/: tests-and-lints-template.yaml
assets/: ERC20.sol  TLoadTest.txt
examples/price_printer/: main.rs  ui.rs
examples/quickstart/: Readme.md  main.rs
examples/rfq_quickstart/: Readme.md  main.rs  utils.rs
examples/shared/: utils.rs
src/: lib.rs  models.rs  serde_helpers.rs  utils.rs
src/evm/: account_storage.rs  decoder.rs  mod.rs  simulation.rs  stream.rs  traces.rs  tycho_models.rs
src/evm/engine_db/: engine_db_interface.rs  mod.rs  simulation_db.rs  tycho_db.rs  utils.rs
src/evm/protocol/: filters.rs  mod.rs  safe_math.rs  u256_num.rs
src/protocol/: errors.rs  models.rs  state.rs
src/rfq/: client.rs  constants.rs  errors.rs  indicatively_priced.rs  mod.rs  models.rs  stream.rs
src/rfq/protocols/: mod.rs  utils.rs
tests/assets/decoder/: balancer_v2_delta.json  pancakeswap_v3_snapshot.json  (+7 more)
token-proxy/: README.md  foundry.toml
token-proxy/assets/: TokenProxy.abi  TokenProxy.bin-runtime
token-proxy/script/: _build_runtime.s.sol  build_runtime.sh
token-proxy/src/: TokenProxy.sol
token-proxy/test/: TokenProxy.t.sol
tycho-rfq/: Cargo.toml
tycho-rfq/src/: lib.rs  main.rs
tycho_simulation_py/: Cargo.toml  pyproject.toml
tycho_simulation_py/python/tycho_simulation_py/assets/: TokenProxy.sol
tycho_simulation_py/python/tycho_simulation_py/evm/: decoders.py  pool_state.py  utils.py
tycho_simulation_py/src/: simulation_py.rs  structs_py.rs
(+67 files in other folders)
