[package]
name = "_tycho_simulation_py"
version = "0.116.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_tycho_simulation_py"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4.3"
pyo3 = { version = "0.19", features = ["num-bigint", "extension-module"] }
tycho-simulation = { path = "../" }
tokio = { version = "1.38.0", features = ["full"] }
alloy = { version = "1.0.6", features = ["providers"] }
revm = { version = "24.0.0", features = [
    "alloydb",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
pyo3-log = "0.9.0"
